orders table with details

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <div class="orders__table__item">Priority Mail</div>
                 <div class="orders__table__item">Processing</div>
                 <div class="orders__table__item">
-                  <button type="button" class="details__btn">
+                  <button type="button" class="details__btn" id="detailsButton">
                     DETAILS
 
                     <svg class="details-icon">
@@ -319,6 +319,173 @@
                   </button>
                 </div>
               </div>
+              <div id="ordersList" class="orders__list inactive-ordersList">
+                <p class="order__list__title">Ordered Items</p>
+                <div class="order__list__thumb">
+                  <div class="order__item__row">
+                    <div class="order__item">
+                      <div class="order__item__icon">
+                        <span class="item__sequence-number">1.</span>
+                        <img
+                          class="order__item__img"
+                          src="./images/orderItem.png"
+                          alt=""
+                        />
+                        <div class="order__item__thumb">
+                          <span class="order__item__title">Part Number</span
+                          ><span class="order__item__part-number">8950909</span>
+                        </div>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Quantity</span
+                        ><span class="order__item-field">33 pcs</span>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Left in stock</span
+                        ><span class="order__item-field">455 pcs</span>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Description</span
+                        ><span class="order__item-field"
+                          >Window handle, rotating screw, 7 mm x 30 mm, aluminum
+                          shell</span
+                        >
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Price per 1pcs</span
+                        ><span class="order__item-field">18,44 USD</span>
+                      </div>
+                      <div class="order__item__total">
+                        <span class="order__item__title">Price Total</span
+                        ><span class="order__item-field">608,52 USD</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="order__item__row">
+                    <div class="order__item">
+                      <div class="order__item__icon">
+                        <span class="item__sequence-number">2.</span>
+                        <img
+                          class="order__item__img"
+                          src="./images/orderItem.png"
+                          alt=""
+                        />
+                        <div class="order__item__thumb">
+                          <span class="order__item__title">Part Number</span
+                          ><span class="order__item__part-number">9559091</span>
+                        </div>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Quantity</span
+                        ><span class="order__item-field">10 pcs</span>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Left in stock</span
+                        ><span class="order__item-field">1017 pcs</span>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Description</span
+                        ><span class="order__item-field"
+                          >Window handle, rotating screw, 10 mm x 40 mm,
+                          aluminum shell</span
+                        >
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Price per 1pcs</span
+                        ><span class="order__item-field">10,20 USD</span>
+                      </div>
+                      <div class="order__item__total">
+                        <span class="order__item__title">Price Total</span
+                        ><span class="order__item-field">102 USD</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="order__item__row">
+                    <div class="order__item">
+                      <div class="order__item__icon">
+                        <span class="item__sequence-number">3.</span>
+                        <img
+                          class="order__item__img"
+                          src="./images/orderItem.png"
+                          alt=""
+                        />
+                        <div class="order__item__thumb">
+                          <span class="order__item__title">Part Number</span
+                          ><span class="order__item__part-number">1872667</span>
+                        </div>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Quantity</span
+                        ><span class="order__item-field">70 pcs</span>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Left in stock</span
+                        ><span class="order__item-field">4255 pcs</span>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Description</span
+                        ><span class="order__item-field"
+                          >ASSEMBLY SCREW @ INTERLOCK POKET ADAPTOR</span
+                        >
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Price per 1pcs</span
+                        ><span class="order__item-field">0,40 USD</span>
+                      </div>
+                      <div class="order__item__total">
+                        <span class="order__item__title">Price Total</span
+                        ><span class="order__item-field">28 USD</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="order__item__row">
+                    <div class="order__item">
+                      <div class="order__item__icon">
+                        <span class="item__sequence-number">4.</span>
+                        <img
+                          class="order__item__img"
+                          src="./images/orderItem.png"
+                          alt=""
+                        />
+                        <div class="order__item__thumb">
+                          <span class="order__item__title">Part Number</span
+                          ><span class="order__item__part-number">2377889</span>
+                        </div>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Quantity</span
+                        ><span class="order__item-field">20 pcs</span>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Left in stock</span
+                        ><span class="order__item-field">127 pcs</span>
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Description</span
+                        ><span class="order__item-field"
+                          >Window handle, rotating screw, 6,5 mm x 20 mm,
+                          aluminum shell</span
+                        >
+                      </div>
+                      <div class="order__item__thumb">
+                        <span class="order__item__title">Price per 1pcs</span
+                        ><span class="order__item-field">10,20 USD</span>
+                      </div>
+                      <div class="order__item__total">
+                        <span class="order__item__title">Price Total</span
+                        ><span class="order__item-field">204 USD</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="order__item__total__thumb">
+                    <div class="order__item__total">
+                      <span class="order__item__title">TOTAL PRICE</span
+                      ><span class="order__item-field">942,52 USD</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="orders__table__row" data-category="processing">
                 <div class="orders__table__item">№ 0009449</div>
                 <div class="orders__table__item">12-05-2023, 07:04AM</div>
@@ -691,5 +858,6 @@
     <script src="./search.js"></script>
     <script src="./input.js"></script>
     <script src="./pagination.js"></script>
+    <script src="./details.js"></script>
   </body>
 </html>
