packing is devided

--- a/packing-devided.html
+++ b/packing-devided.html
@@ -61,7 +61,7 @@
 
         <section class="orders">
           <h2 class="orders__packing__title">
-            Orders/<span class="title__category">Packing</span>
+            Orders/<span class="title__category">№ 0009450 Packing </span>
           </h2>
           <div class="orders__btns__container">
             <div>
@@ -131,6 +131,155 @@
                 <button type="button" class="action__btn" id="splitBtn">
                   Split
                 </button>
+              </div>
+
+              <div class="devided-packing__list">
+                <p class="devided__list__title">Packages</p>
+                <div class="devided-packing__thumb">
+                  <div class="devided-packing__table">
+                    <div class="order__item__icon">
+                      <span class="item__sequence-number">1.</span>
+                      <img
+                        class="devided__item__img"
+                        src="./images/orderItem.png"
+                        alt=""
+                      />
+                      <div class="order__item__number__thumb">
+                        <span class="order__item__title">Part Number</span
+                        ><span class="order__item__part-number">8950909</span>
+                      </div>
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Total</span
+                      ><span class="order__item-field">33 pcs</span>
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Chosen Quantity</span>
+                      <div class="chosen__quantity__input">
+                        <input
+                          class="devided__chosen__quantity"
+                          value="11"
+                          type="text"
+                        />
+                        <svg class="icon-complete">
+                          <use href="./images/icons.svg#icon-complete"></use>
+                        </svg>
+                      </div>
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Description</span
+                      ><span class="order__item-field"
+                        >Window handle, rotating screw, 7 mm x 30 mm, aluminum
+                        shell</span
+                      >
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Price per 1pcs</span
+                      ><span class="order__item-field">18,44 USD</span>
+                    </div>
+                    <div class="order__item__total">
+                      <span class="order__item__title">Price Total</span
+                      ><span class="order__item-field">202,84 USD</span>
+                    </div>
+
+                    <div class="order__item__icon">
+                      <span class="item__sequence-number">2.</span>
+                      <img
+                        class="devided__item__img"
+                        src="./images/orderItem.png"
+                        alt=""
+                      />
+                      <div class="order__item__number__thumb">
+                        <span class="order__item__title">Part Number</span
+                        ><span class="order__item__part-number">9559091</span>
+                      </div>
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Total</span
+                      ><span class="order__item-field">33 pcs</span>
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Chosen Quantity</span>
+                      <div class="chosen__quantity__input">
+                        <input
+                          class="devided__chosen__quantity"
+                          value="11"
+                          type="text"
+                        />
+                        <svg class="icon-complete">
+                          <use href="./images/icons.svg#icon-complete"></use>
+                        </svg>
+                      </div>
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Description</span
+                      ><span class="order__item-field"
+                        >Window handle, rotating screw, 7 mm x 30 mm, aluminum
+                        shell</span
+                      >
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Price per 1pcs</span
+                      ><span class="order__item-field">18,44 USD</span>
+                    </div>
+                    <div class="order__item__total">
+                      <span class="order__item__title">Price Total</span
+                      ><span class="order__item-field">202,84 USD</span>
+                    </div>
+
+                    <div class="order__item__icon">
+                      <span class="item__sequence-number">3.</span>
+                      <img
+                        class="devided__item__img"
+                        src="./images/orderItem.png"
+                        alt=""
+                      />
+                      <div class="order__item__number__thumb">
+                        <span class="order__item__title">Part Number</span
+                        ><span class="order__item__part-number">1872667</span>
+                      </div>
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Total</span
+                      ><span class="order__item-field">33 pcs</span>
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Chosen Quantity</span>
+                      <div class="chosen__quantity__input">
+                        <input
+                          class="devided__chosen__quantity"
+                          value="11"
+                          type="text"
+                        />
+                        <svg class="icon-complete">
+                          <use href="./images/icons.svg#icon-complete"></use>
+                        </svg>
+                      </div>
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Description</span
+                      ><span class="order__item-field"
+                        >Window handle, rotating screw, 7 mm x 30 mm, aluminum
+                        shell</span
+                      >
+                    </div>
+                    <div class="order__item__thumb">
+                      <span class="order__item__title">Price per 1pcs</span
+                      ><span class="order__item-field">18,44 USD</span>
+                    </div>
+                    <div class="order__item__total">
+                      <span class="order__item__title">Price Total</span
+                      ><span class="order__item-field">202,84 USD</span>
+                    </div>
+
+                    <div class="order__item__total__thumb">
+                      <div class="order__item__total-price">
+                        <span class="order__item__title">TOTAL PRICE</span
+                        ><span class="order__item-field">608,52 USD</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               <div class="packing__item__icon">
@@ -281,7 +430,7 @@
                 selected number of packages.
               </p>
               <p class="modal__label">Select</p>
-              <div class="modal__input__thumb">
+              <div class="test">
                 <input class="modal__input" type="float" value="3" />
                 <div class="quantity__icons">
                   <svg class="icon__up" data-modal-close>
