fixed table and input with type number

--- a/orders-packing.html
+++ b/orders-packing.html
@@ -109,7 +109,7 @@
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Chosen Quantity </span>
-                <input class="chosen__quantity" value="33" type="text" />
+                <input class="chosen__quantity" value="33" type="number" />
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Description</span
@@ -154,7 +154,7 @@
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Chosen Quantity</span>
-                <input class="chosen__quantity" value="10" type="text" />
+                <input class="chosen__quantity" value="10" type="number" />
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Description</span
@@ -196,7 +196,7 @@
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Chosen Quantity </span>
-                <input class="chosen__quantity" value="50" type="text" />
+                <input class="chosen__quantity" value="50" type="number" />
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Description</span
@@ -237,7 +237,7 @@
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Chosen Quantity </span>
-                <input class="chosen__quantity" value="20" type="text" />
+                <input class="chosen__quantity" value="20" type="number" />
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Description</span
@@ -282,7 +282,7 @@
               </p>
               <p class="modal__label">Select</p>
               <div class="modal__input__thumb">
-                <input class="modal__input" type="float" value="3" />
+                <input class="modal__input" type="number" value="3" />
                 <div class="quantity__icons">
                   <svg class="icon__up" data-modal-close>
                     <use href="./images/icons.svg#icon-chevron-down"></use>
