--- a/packing-devided.html
+++ b/packing-devided.html
@@ -109,7 +109,7 @@
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Chosen Quantity </span>
-                <input class="chosen__quantity" value="33" type="text" />
+                <input class="chosen__quantity" value="33" type="number" />
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Description</span
@@ -159,7 +159,7 @@
                         <input
                           class="devided__chosen__quantity"
                           value="11"
-                          type="text"
+                          type="number"
                         />
                         <svg class="icon-complete">
                           <use href="./images/icons.svg#icon-complete"></use>
@@ -204,7 +204,7 @@
                         <input
                           class="devided__chosen__quantity"
                           value="11"
-                          type="text"
+                          type="number"
                         />
                         <svg class="icon-complete">
                           <use href="./images/icons.svg#icon-complete"></use>
@@ -249,7 +249,7 @@
                         <input
                           class="devided__chosen__quantity"
                           value="11"
-                          type="text"
+                          type="number"
                         />
                         <svg class="icon-complete">
                           <use href="./images/icons.svg#icon-complete"></use>
@@ -303,7 +303,7 @@
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Chosen Quantity</span>
-                <input class="chosen__quantity" value="10" type="text" />
+                <input class="chosen__quantity" value="10" type="number" />
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Description</span
@@ -345,7 +345,7 @@
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Chosen Quantity </span>
-                <input class="chosen__quantity" value="50" type="text" />
+                <input class="chosen__quantity" value="50" type="number" />
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Description</span
@@ -386,7 +386,7 @@
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Chosen Quantity </span>
-                <input class="chosen__quantity" value="20" type="text" />
+                <input class="chosen__quantity" value="20" type="number" />
               </div>
               <div class="packing__item__thumb">
                 <span class="order__item__title">Description</span
@@ -435,7 +435,7 @@
               </p>
               <p class="modal__label">Select</p>
               <div class="modal__input__thumb">
-                <input class="modal__input" type="float" value="3" />
+                <input class="modal__input" type="number" value="3" />
                 <div class="quantity__icons">
                   <svg class="icon__up" data-modal-close>
                     <use href="./images/icons.svg#icon-chevron-down"></use>
@@ -486,7 +486,7 @@
                   </div>
                   <div class="modal__packing__item__thumb">
                     <span class="modal__order__item__title">Total Quantity</span>
-                    <input class="modal__chosen__quantity" value="33" type="text" />
+                    <input class="modal__chosen__quantity" value="33" type="number" />
                   </div>
                   <div class="modal__packing__item__thumb">
                     <span class="modal__order__item__title">Description</span
@@ -529,7 +529,7 @@
                             <input
                               class="devided__chosen__quantity"
                               value="11"
-                              type="text"
+                              type="number"
                             />
                             <svg class="icon-complete">
                               <use
@@ -569,7 +569,7 @@
                             <input
                               class="devided__chosen__quantity"
                               value="11"
-                              type="text"
+                              type="number"
                             />
                             <svg class="icon-complete">
                               <use
@@ -609,7 +609,7 @@
                             <input
                               class="devided__chosen__quantity"
                               value="11"
-                              type="text"
+                              type="number"
                             />
                             <svg class="icon-complete">
                               <use
@@ -650,7 +650,7 @@
                   </div>
                   <div class="modal__packing__item__thumb">
                     <span class="modal__order__item__title">Total Quantity</span>
-                    <input class="modal__chosen__quantity" value="10" type="text" />
+                    <input class="modal__chosen__quantity" value="10" type="number" />
                   </div>
                   <div class="modal__packing__item__thumb">
                     <span class="modal__order__item__title">Description</span
@@ -681,7 +681,7 @@
                   </div>
                   <div class="modal__packing__item__thumb">
                     <span class="modal__order__item__title">Total Quantity</span>
-                    <input class="modal__chosen__quantity" value="50" type="text" />
+                    <input class="modal__chosen__quantity" value="50" type="number" />
                   </div>
                   <div class="modal__packing__item__thumb">
                     <span class="modal__order__item__title">Description</span
@@ -711,7 +711,7 @@
                   </div>
                   <div class="modal__packing__item__thumb">
                     <span class="modal__order__item__title">Total Quantity</span>
-                    <input class="modal__chosen__quantity" value="20" type="text" />
+                    <input class="modal__chosen__quantity" value="20" type="number" />
                   </div>
                   <div class="modal__packing__item__thumb">
                     <span class="modal__order__item__title">Description</span
