fixed button in modal

--- a/packing-devided.html
+++ b/packing-devided.html
@@ -734,8 +734,10 @@
                 <div class="packing__img-thumb">
                 <img class="packing__img" src="./images/packing.jpg" alt="packing sticker">
               </div></div>
-                <div class="confirm__modal__buttons"><button class="back__btn" data-packing-close type="button">Go back</button>
-                  <button class="print__btn" type="button">Print stickers</button>
+                <div class="confirm__modal__buttons">
+                  <button class="back__btn" data-packing-close type="button">Go back</button>
+                  <button id="printBtn" class="print__btn" type="button">Print stickers</button>
+                  <button id="finishBtn" class="finish__btn" type="button">Finish</button>
                 </div>
               </div>
             </div>
